# actix-sample

./: Cargo.toml  README.md
front/: Cargo.toml
front/src/: lib.rs
front/static/: index.html
server/: Cargo.toml
server/src/: main.rs
