[package]
name = "front"
version = "0.1.0"
authors = ["care0717 <dev.care0717@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2"
anyhow = "1.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }

[lib]
crate-type = ["cdylib", "rlib"]
