[package]
name = "server"
version = "0.1.0"
authors = ["care0717 <dev.care0717@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
serde = { version = "1.0.125", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"
rusqlite = "0.25.0"
